2010-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/command.c src/history.c src/mouse.c src/plot.c
	src/show.c:

	Finally a work-around for the broken libreadline on OSX, which is really
	a wrapper for some version of libeditline.  Test for each potentially
	missing function in configure and deal with it if it's missing.  There
	may still be an issue with autoconfiguring support for the history
	functions.
	Bug #1839048 and others 

2010-07-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/command.h src/eval.c src/fit.c src/gp_types.h
	src/plot.c src/readline.c src/stdfn.c src/syscfg.h src/term.h:
	Remove vestigial tests for DOS16 or DOS386

2010-07-29  Allin Cottrell  <cottrell@wfu.edu>

	* src/term.c src/term_api.h term/emf.trm term/svg.trm docs/gnuplot.doc:
	Add support for codepage 950, which is Microsoft's version of Chinese
	Big5 encoding.  Only the emf terminal (and maybe svg) do anything useful
	with it.   "set encoding cp950"

2010-07-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm:  Always estimate escaped characters as requiring
	one character width.
	Bug #3036010

2010-07-27  Tim Mooney  <enchanter@users.sourceforge.net>

	* configure.in:  If lua.pc is not present but liblua.so is found
	anyhow,  then set HAVE_LUA and LUA_LIBS explicitly.
	Bug #3035608

2010-07-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm src/win/wgraph.c:  Yet another windows terminal font fix.
	Bug #2972307

2010-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  "set term canvas fontscale <fs>"

	* src/graphics.c (do_plot do_key_layout): Separate out the code that
	allocates space for the graph legend, and collect the key sample code
	into a single place.

2010-07-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: typos
	* docs/term-ja.diff docs/gnuplot-ja.doc:
	Sync Japanese documentation to gnuplot.doc rev 1.617
